# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  docker-compose.yml  pyproject.toml  schema.sql  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava2.md
postgres-data/global/: 1260  pg_control
postgres-data/pg_stat/: pgstat.stat
src/: config.py  create_sample_data.py  index.py
src/db/: __init__.py  member_repository.py  user_repository.py  utils.py
src/entities/: member.py  user.py
src/repositories/: __init__.py  member_repository.py  user_repository.py
src/services/: __init__.py  registry_service.py  user_service.py
src/tests/repositories/: member_repository_test.py  user_repository_test.py
src/tests/services/: registry_service_test.py
src/ui/: commands.py  create_user_view.py  login_view.py  members_view.py  ui.py
